add require variable-module to composer

--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
         "psr-4": {
             "Visiosoft\\SahibindenStyleProviderExtension\\": "src/"
         }
+    },
+    "require": {
+        "anomaly/variables-module": "^2.4.3"
     }
 }
